clap_derive/tests/ui/bool_default_value.stderr
error: default_value is meaningless for bool
  --> $DIR/bool_default_value.rs:14:19
   |
14 |     #[clap(short, default_value = true)]
   |                   ^^^^^^^^^^^^^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/bool_default_value.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`
